@@ -8,6 +8,7 @@ Version 0.11.2
 - Fixed an issue with the forking server not starting any longer.
 - Fixed SSL wrapping on platforms that supported opening sockets
   by file descriptor.
+- No longer log from the watchdog reloader.
 
 Version 0.11.1
 --------------
